# approximate-integration

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  compile_commands.json
apps/: CMakeLists.txt  volesti_integrate.cpp
examples/example-gaussian/: gaussian.expr  polytope.latte
examples/example-polynomial/: polynomial.expr  polytope.hrep
include/: function.hpp  integration.hpp  polynomial.hpp
src/: CMakeLists.txt  integrate_polynomial.cpp
